Add navbar and basic about page

--- a/sail/public/templates/public/base.html
+++ b/sail/public/templates/public/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,6 +9,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     
+    <link rel="stylesheet" type="text/css" href="{% static 'public/main.css' %}">
+
     {% if title %}
         <title>Illinois CS Sail - {{ title }}</title>
     {% else %}
@@ -15,6 +18,28 @@
     {% endif %}
 </head>
 <body>
+    <header class="site-header">
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-sail-color">
+            <div class="container">
+                <a class="navbar-brand mr-4" href="{% url 'sail-home' %}">Illinois CS Sail</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarToggle">
+                    <div class="navbar-nav mr-auto">
+                        <a class="nav-item nav-link" href="{% url 'sail-home' %}">Home</a>
+                        <a class="nav-item nav-link" href="{% url 'sail-about' %}">About</a>
+                    </div>
+
+                    <!-- Navbar Right Side -->
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link" href="#">Login</a>
+                        <a class="nav-item nav-link" href="#">Register</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
     <div class="container">
         {% block content %}{% endblock content %}
     </div>
