--- a/sail/public/templates/public/about.html
+++ b/sail/public/templates/public/about.html
@@ -1,4 +1,17 @@
 {% extends "public/base.html" %}
 {% block content %}
-    <h1>About page</h1>
+    <h3>What is Sail?</h3>
+    <p>
+        Sail is a one-day event held at the Thomas M. Siebel Center for Computer Science. It is completely free to attend, and we'll also provide attendees with breakfast, lunch, dinner, and lots of swag! Come learn more about computer science and life at the University of Illinois through classes taught by current students on topics ranging from Machine Learning and Virtual Reality to The Science of Bitcoin and Texas Hold'em Techniques.        
+    </p>
+
+    <h3>Who is Sail for?</h3>
+    <p>
+        High school students like you! If you're interested in computer science, this is a great way to gain more exposure to the field and make some friends along the way! We welcome students of all backgrounds.        
+    </p>
+
+    <h3>When and where is Sail?</h3>
+    <p>
+        Sail will be at the Siebel Center for Computer Science at the University of Illinois at Urbana-Champaign. Stay tuned for more information about Sail 2020 as we approach April!
+    </p>
 {% endblock content %}
