--- a/sail/public/templates/public/base.html
+++ b/sail/public/templates/public/base.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     
     <link rel="stylesheet" type="text/css" href="{% static 'public/main.css' %}">
+    {% block css %}{% endblock css %}
 
+    <link rel="shortcut icon" type="image/png" href="{% static 'public/favicon.ico' %}">
     {% if title %}
         <title>Illinois CS Sail - {{ title }}</title>
     {% else %}
