Create staff page

--- a/sail/public/templates/public/base.html
+++ b/sail/public/templates/public/base.html
@@ -31,6 +31,7 @@
                     <div class="navbar-nav mr-auto">
                         <a class="nav-item nav-link" href="{% url 'sail-home' %}">Home</a>
                         <a class="nav-item nav-link" href="{% url 'sail-about' %}">About</a>
+                        <a class="nav-item nav-link" href="{% url 'sail-staff' %}">Staff</a>
                     </div>
 
                     <!-- Navbar Right Side -->
