Create user registration form

--- a/sail/public/templates/public/base.html
+++ b/sail/public/templates/public/base.html
@@ -1,3 +1,6 @@
+<!-- Big thank you to Corey Schafer and his Django series, which 
+     parts of this code is referenced from. -->
+
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -37,16 +40,25 @@
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
                         <a class="nav-item nav-link" href="#">Login</a>
-                        <a class="nav-item nav-link" href="#">Register</a>
+                        <a class="nav-item nav-link" href="{% url 'users-register' %}">Register</a>
                     </div>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
+    <main role="main" class="container">
+        <!-- If flash messages are sent to this template by Django-->
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
+        
         {% block content %}{% endblock content %}
-    </div>
-
+    </main>
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
