--- a/sail/public/static/public/main.css
+++ b/sail/public/static/public/main.css
@@ -33,3 +33,11 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0 auto;
     width: 50%;
 }
+
+.content-section {
+    background: #ffffff;
+    padding: 10px 20px;
+    border: 1px solid #dddddd;
+    border-radius: 3px;
+    margin-bottom: 20px;
+  }
