--- a/sail/public/templates/public/base.html
+++ b/sail/public/templates/public/base.html
@@ -39,8 +39,12 @@
 
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
-                        <a class="nav-item nav-link" href="#">Login</a>
-                        <a class="nav-item nav-link" href="{% url 'users-register' %}">Register</a>
+                        {% if user.is_authenticated %}
+                            <a class="nav-item nav-link" href="{% url 'users-logout' %}">Logout</a>
+                        {% else %}
+                            <a class="nav-item nav-link" href="{% url 'users-login' %}">Login</a>
+                            <a class="nav-item nav-link" href="{% url 'users-register' %}">Register</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
