--- a/sail/users/templates/users/login.html
+++ b/sail/users/templates/users/login.html
@@ -5,18 +5,21 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Make an Account</legend>
+                <legend class="border-bottom mb-4">Log In</legend>
                 <div class="w-50">
                     {{ form|crispy }}
                 </div>
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Sign Up</button>
+                <button class="btn btn-outline-info" type="submit">Login</button>
+                <small class="text-muted ml-2">
+                    <a href="#">Forgot password</a>
+                </small>
             </div>
         </form>
-        <div class="border-top pb-3">
+        <div class="border-top pt-3">
             <small class="text-muted">
-                Already have an account? <a class="ml-2" href="{% url 'users-login' %}">Sign In</a>
+                Need an account? <a class="ml-2" href="{% url 'users-register' %}">Signup now</a>
             </small>
         </div>
     </div>
