--- a/sail/public/templates/public/base.html
+++ b/sail/public/templates/public/base.html
@@ -40,6 +40,7 @@
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
                         {% if user.is_authenticated %}
+                            <a class="nav-item nav-link" href="{% url 'users-profile' %}">Profile</a>
                             <a class="nav-item nav-link" href="{% url 'users-logout' %}">Logout</a>
                         {% else %}
                             <a class="nav-item nav-link" href="{% url 'users-login' %}">Login</a>
