--- a/sail/public/static/public/main.css
+++ b/sail/public/static/public/main.css
@@ -41,3 +41,14 @@ h1, h2, h3, h4, h5, h6 {
     border-radius: 3px;
     margin-bottom: 20px;
 }
+
+.account-img {
+    height: 125px;
+    width: 125px;
+    margin-right: 20px;
+    margin-bottom: 16px;
+  }
+  
+  .account-heading {
+    font-size: 2.5rem;
+  }
