Alter SailParticipant fields

--- a/sail/users/templates/users/profile.html
+++ b/sail/users/templates/users/profile.html
@@ -6,6 +6,7 @@
             <div class="media-body">
                 <h2 class="account-heading">{{ user.first_name }} {{ user.last_name }}</h2>
                 <p class="text-secondary">{{ user.email }}</p>
+                <p>{{ user.sailparticipant.role }}</p>
             </div>
         </div>
         <!-- FORM HERE -->
