--- a/sail/users/templates/users/logout.html
+++ b/sail/users/templates/users/logout.html
@@ -4,6 +4,8 @@
     <div class="border-top pb-3">
         <small class="text-muted">
             <a href="{% url 'users-login' %}">Login again</a>
+            <br>
+            <a href="{% url 'sail-home' %}">Back to home</a>
         </small>
     </div>
 {% endblock content %}
