Append user update form to profile page

--- a/sail/public/templates/public/base.html
+++ b/sail/public/templates/public/base.html
@@ -1,5 +1,5 @@
 <!-- Big thank you to Corey Schafer and his Django series, which 
-     parts of this code is referenced from. -->
+     parts of this code are referenced from. -->
 
 {% load static %}
 <!DOCTYPE html>
