Change Participant model to Teacher and Student models

--- a/sail/users/templates/users/logout.html
+++ b/sail/users/templates/users/logout.html
@@ -1,7 +1,7 @@
 {% extends "public/base.html" %}
 {% block content %}
     <h2>You've been successfully logged out</h2>
-    <div class="border-top pb-3">
+    <div class="border-top pt-3">
         <small class="text-muted">
             <a href="{% url 'users-login' %}">Login again</a>
             <br>
