--- a/sail/users/templates/users/profile.html
+++ b/sail/users/templates/users/profile.html
@@ -19,8 +19,11 @@
                 </div>
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Update</button>
+                <button class="btn btn-outline-primary" type="submit" name="action" value="Update">Update</button>
+                <button class="btn btn-outline-danger" type="submit" name="action" value="Delete" onclick="return confirm('Are you sure? This will permanently delete your account!')">Delete</button>
             </div>
         </form>
+
+
     </div>
 {% endblock content %}
