Implement password reset

--- a/sail/users/templates/users/login.html
+++ b/sail/users/templates/users/login.html
@@ -13,7 +13,7 @@
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Login</button>
                 <small class="text-muted ml-2">
-                    <a href="#">Forgot password</a>
+                    <a href="{% url 'password_reset' %}">Forgot password?</a>
                 </small>
             </div>
         </form>
