Rename file dashes to underscores

--- a/sail/users/templates/users/logout.html
+++ b/sail/users/templates/users/logout.html
@@ -3,9 +3,9 @@
     <h2>You've been successfully logged out</h2>
     <div class="border-top pt-3">
         <small class="text-muted">
-            <a href="{% url 'users-login' %}">Login again</a>
+            <a href="{% url 'users_login' %}">Login again</a>
             <br>
-            <a href="{% url 'sail-home' %}">Back to home</a>
+            <a href="{% url 'sail_home' %}">Back to home</a>
         </small>
     </div>
 {% endblock content %}
