--- a/sail/users/templates/users/password_reset_done.html
+++ b/sail/users/templates/users/password_reset_done.html
@@ -3,5 +3,5 @@
     <div class='alert alert-info'>
         An email has been sent with instructions to reset your password. Please check your spam if you don't see our email in your inbox. Thank you!
     </div>
-    <a href="{% url 'sail-home' %}">Back to home</a>
+    <a href="{% url 'sail_home' %}">Back to home</a>
 {% endblock content %}
