--- a/sail/users/templates/users/register.html
+++ b/sail/users/templates/users/register.html
@@ -4,7 +4,7 @@
     <div class="content-section">
         <legend class="border-bottom mb-3">Make an Account</legend>
         <p>Please select the type of account you would like to make:</p>
-        <a class="btn btn-outline-primary" href="{% url 'users-register-teacher' %}">Teacher</a>
-        <a class="btn btn-outline-primary" href="{% url 'users-register-student' %}">Student</a>
+        <a class="btn btn-outline-primary" href="{% url 'users_register_teacher' %}">Teacher</a>
+        <a class="btn btn-outline-primary" href="{% url 'users_register_student' %}">Student</a>
     </div>
 {% endblock content %}
