--- a/sail/public/templates/public/base.html
+++ b/sail/public/templates/public/base.html
@@ -26,25 +26,25 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-sail-color">
             <div class="container">
-                <a class="navbar-brand mr-4" href="{% url 'sail-home' %}">Illinois CS Sail</a>
+                <a class="navbar-brand mr-4" href="{% url 'sail_home' %}">Illinois CS Sail</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarToggle">
                     <div class="navbar-nav mr-auto">
-                        <a class="nav-item nav-link" href="{% url 'sail-home' %}">Home</a>
-                        <a class="nav-item nav-link" href="{% url 'sail-about' %}">About</a>
-                        <a class="nav-item nav-link" href="{% url 'sail-staff' %}">Staff</a>
+                        <a class="nav-item nav-link" href="{% url 'sail_home' %}">Home</a>
+                        <a class="nav-item nav-link" href="{% url 'sail_about' %}">About</a>
+                        <a class="nav-item nav-link" href="{% url 'sail_staff' %}">Staff</a>
                     </div>
 
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
                         {% if user.is_authenticated %}
-                            <a class="nav-item nav-link" href="{% url 'users-profile' %}">Profile</a>
-                            <a class="nav-item nav-link" href="{% url 'users-logout' %}">Logout</a>
+                            <a class="nav-item nav-link" href="{% url 'users_profile' %}">Profile</a>
+                            <a class="nav-item nav-link" href="{% url 'users_logout' %}">Logout</a>
                         {% else %}
-                            <a class="nav-item nav-link" href="{% url 'users-login' %}">Login</a>
-                            <a class="nav-item nav-link" href="{% url 'users-register' %}">Register</a>
+                            <a class="nav-item nav-link" href="{% url 'users_login' %}">Login</a>
+                            <a class="nav-item nav-link" href="{% url 'users_register' %}">Register</a>
                         {% endif %}
                     </div>
                 </div>
