--- a/sail/users/templates/users/password_reset_complete.html
+++ b/sail/users/templates/users/password_reset_complete.html
@@ -3,5 +3,5 @@
     <div class='alert alert-info'>
         Your new password has been set.
     </div>
-    <a href="{% url 'users-login' %}">Sign in</a>
+    <a href="{% url 'users_login' %}">Sign in</a>
 {% endblock content %}
