--- a/sail/courses/templates/courses/course_list.html
+++ b/sail/courses/templates/courses/course_list.html
@@ -2,14 +2,14 @@
 {% block content %}
     {% for course in courses %}
         <article class="media content-section">
-          <div class="media-body">
+            <div class="media-body">
             <div class="article-metadata">
-              <a class="mr-2" href="#">{{ course.teacher }}</a>
-              <small class="text-muted">Created on {{ course.time_created|date:"F d, Y" }}</small>
+                <a class="mr-2" href="#">{{ course.teacher }}</a>
+                <small class="text-muted">Created on {{ course.time_created|date:"F d, Y" }}</small>
             </div>
-            <h2><a class="article-title">{{ course.course_name }}</a></h2>
+            <h2><a class="article-title" href="{% url 'courses_detail' course.id %}">{{ course.course_name }}</a></h2>
             <p class="article-content">{{ course.short_description }}</p>
-          </div>
+            </div>
         </article>
     {% endfor %}
 {% endblock content %}
