--- a/sail/courses/templates/courses/course_detail.html
+++ b/sail/courses/templates/courses/course_detail.html
@@ -5,6 +5,12 @@
         <div class="article-metadata">
             <a class="mr-2" href="#">{{ course.teacher }}</a>
             <small class="text-muted">Created on {{ course.time_created|date:"F d, Y" }}</small>
+            {% if course.teacher == user.teacher %}
+                <div>
+                    <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'courses_update' course.id %}">Update</a>
+                    <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'courses_delete' course.id %}">Delete</a>
+                </div> 
+            {% endif %}
         </div>
         <h2 class="article-title">{{ course.course_name }}</h2>
         <p class="article-content">{{ course.description }}</p>
