--- a/sail/public/templates/public/base.html
+++ b/sail/public/templates/public/base.html
@@ -35,6 +35,7 @@
                         <a class="nav-item nav-link" href="{% url 'sail_home' %}">Home</a>
                         <a class="nav-item nav-link" href="{% url 'sail_about' %}">About</a>
                         <a class="nav-item nav-link" href="{% url 'sail_staff' %}">Staff</a>
+                        <a class="nav-item nav-link" href="{% url 'courses_list' %}">Courses</a>
                     </div>
 
                     <!-- Navbar Right Side -->
