Filter courses by tags

--- a/sail/courses/templates/courses/course_detail.html
+++ b/sail/courses/templates/courses/course_detail.html
@@ -16,4 +16,9 @@
             <p class="article-content">{{ course.description }}</p>
         </div>
     </article>
+    <div class="border-top pt-3">
+        <small class="text-muted">
+            <a href="{% url 'courses_list' %}">Back to Courses</a>
+        </small>
+    </div>
 {% endblock content %}
