--- a/sail/users/templates/users/profile.html
+++ b/sail/users/templates/users/profile.html
@@ -24,7 +24,7 @@
             </div>
         </form>
 
-        {% if user.role == "Teacher" %}
+        {% if user.teacher %}
             <legend class="border-bottom">My Courses</legend>
             <small class="text-muted">Click on a course to view, update, or delete it.</small>
             <div class="mt-3">
