--- a/sail/courses/templates/courses/course_list.html
+++ b/sail/courses/templates/courses/course_list.html
@@ -1,5 +1,6 @@
 {% extends "public/base.html" %}
 {% load crispy_forms_tags %}
+{% load courses_extras %}
 {% block content %}
     <div class="row">
         <div class="col-8">
@@ -27,6 +28,25 @@
                     </div>
                 </article>
             {% endfor %}
+            {% if is_paginated %}
+                {% if page_obj.has_previous %}
+                    <a class="btn btn-outline-info mb-4" href="?{% url_replace request 'page' 1 %}">First</a>
+                    <a class="btn btn-outline-info mb-4" href="?{% url_replace request 'page' page_obj.previous_page_number %}">Previous</a>
+                {% endif %}
+
+                {% for num in page_obj.paginator.page_range %}
+                    {% if page_obj.number == num %}
+                        <a class="btn btn-info mb-4" href="?{% url_replace request 'page' num %}">{{ num }}</a>
+                    {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+                        <a class="btn btn-outline-info mb-4" href="?{% url_replace request 'page' num %}">{{ num }}</a>
+                    {% endif %}
+                {% endfor %}
+
+                {% if page_obj.has_next %}
+                    <a class="btn btn-outline-info mb-4" href="?{% url_replace request 'page' page_obj.next_page_number %}">Next</a>
+                    <a class="btn btn-outline-info mb-4" href="?{% url_replace request 'page' page_obj.paginator.num_pages %}">Last</a>
+                {% endif %}
+            {% endif %}
         </div>
         <div class="col">
             <div class="content-section">
@@ -35,6 +55,7 @@
                     {{ tag_form|crispy }}
                     <button class="btn btn-outline-primary" type="submit">Filter</button>
                 </form>
+                <a class="btn btn-outline-primary mt-2" href="{% url 'courses_list' %}">Clear Filters</a>
             </div>
           </div>
     </div>
