Display course tags

--- a/sail/courses/templates/courses/course_detail.html
+++ b/sail/courses/templates/courses/course_detail.html
@@ -14,6 +14,7 @@
             </div>
             <h2 class="article-title">{{ course.course_name }}</h2>
             <p class="article-content">{{ course.description }}</p>
+            <small class="text-muted">Tags: {{ course.tags.all|join:", " }}</small>
         </div>
     </article>
     <div class="border-top pt-3">
