Change time display for courses

--- a/sail/courses/templates/courses/course_detail.html
+++ b/sail/courses/templates/courses/course_detail.html
@@ -4,8 +4,7 @@
         <div class="media-body">
             <div class="article-metadata">
                 <a class="mr-2" href="#">{{ course.teacher }}</a>
-                <small class="text-muted">Start Time: {{ course.start_time }} | </small>
-                <small class="text-muted">Course length: {{ course.course_length }} minutes</small>
+                <small class="text-muted">Time: {{ course.start_time|date:"H:i" }} - {{ course.start_time|add:course.course_duration|date:"H:i" }}</small>
                 {% if course.teacher == user.teacher %}
                     <div>
                         <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'courses_update' course.id %}">Update</a>
