--- a/sail/courses/templates/courses/course_list.html
+++ b/sail/courses/templates/courses/course_list.html
@@ -10,9 +10,7 @@
                         <div class="article-metadata">
                             <span class="mr-2">By</span>
                             <a class="mr-2" href="#">{{ course.teacher }}</a>
-                            <!-- <small class="text-muted">Created on {{ course.time_created|date:"F d, Y" }}</small> -->
-                            <small class="text-muted">Start Time: {{ course.start_time }} | </small>
-                            <small class="text-muted">Course length: {{ course.course_length }} minutes</small>
+                            <small class="text-muted">Time: {{ course.start_time|date:"H:i" }} - {{ course.start_time|add:course.course_duration|date:"H:i" }}</small>
                             {% if user.student %}
                                 <form method="POST" style="display:inline">
                                     {% csrf_token %}
