--- a/sail/courses/templates/courses/course_detail.html
+++ b/sail/courses/templates/courses/course_detail.html
@@ -11,6 +11,16 @@
                         <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'courses_delete' course.id %}">Delete</a>
                     </div> 
                 {% endif %}
+                {% if user.student %}
+                    <form method="POST" style="display:inline">
+                        {% csrf_token %}
+                        {% if course in user.student.course_set.all %}
+                            <button class="btn btn-success btn-sm ml-3" type="submit" name="{{ course.id }}" value="Unregister">Unregister</button>
+                        {% else %}
+                            <button class="btn btn-success btn-sm ml-3" type="submit" name="{{ course.id }}" value="Register">Register</button>
+                        {% endif %}
+                    </form>
+                {% endif %}
             </div>
             <h2 class="article-title">{{ course.course_name }}</h2>
             <p class="article-content">{{ course.description }}</p>
