--- a/sail/courses/templates/courses/my_courses.html
+++ b/sail/courses/templates/courses/my_courses.html
@@ -3,8 +3,11 @@
     <legend class="border-bottom">My Courses</legend>
     <small class="text-muted">Click on a course to view it.</small>
     <div class="mt-3">
-        {% for course in user.student.course_set.all %}
-            <a class="btn btn-outline-info" href="{% url 'courses_detail' course.id %}">{{ course }}</a>
+        {% for course in courses %}
+            <div class="mb-3">
+                <h3>{{ course.start_time|date:"H:i" }}</h3>
+                <a class="btn btn-outline-info" href="{% url 'courses_detail' course.id %}">{{ course }}</a>
+            </div>
         {% endfor %}
     </div>
 {% endblock content %}
