Format course display on list view

--- a/sail/courses/templates/courses/course_detail.html
+++ b/sail/courses/templates/courses/course_detail.html
@@ -22,7 +22,7 @@
                     </form>
                 {% endif %}
             </div>
-            <h2 class="article-title">{{ course.course_name }}</h2>
+            <h2 class="article-title mt-2">{{ course.course_name }}</h2>
             <p class="article-content">{{ course.description }}</p>
             <small class="text-muted">Tags: {{ course.tags.all|join:", " }}</small>
         </div>
