--- a/sail/courses/templates/courses/course_list.html
+++ b/sail/courses/templates/courses/course_list.html
@@ -9,20 +9,29 @@
                     <div class="media-body">
                         <div class="article-metadata">
                             <h3 style="display:inline"><u><a id="coursename" href="{% url 'courses_detail' course.id %}">{{ course.course_name }}</a></u></h3>
-                            <span class="ml-1">by {{ course.teacher }}</span>
-                            <div class="float-right">
-                                <small class="text-muted">Time: {{ course.start_time|date:"H:i" }} - {{ course.start_time|add:course.course_duration|date:"H:i" }}</small>
-                                {% if user.student %}
-                                    <form method="POST" style="display:inline">
-                                        {% csrf_token %}
-                                        {% if course in user.student.course_set.all %}
-                                            <button class="btn btn-success btn-sm ml-3" type="submit" name="{{ course.id }}" value="Unregister">Unregister</button>
-                                        {% else %}
-                                            <button class="btn btn-success btn-sm ml-3" type="submit" name="{{ course.id }}" value="Register">Register</button>
-                                        {% endif %}
-                                    </form>
-                                {% endif %}
-                            </div>
+                            <span class="ml-1 float-right">by {{ course.teacher }}</span>
+                            {% if course.teacher == user.teacher %}
+                                <div>
+                                    <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'courses_update' course.id %}">Update</a>
+                                    <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'courses_delete' course.id %}">Delete</a>
+                                </div> 
+                            {% endif %}
+                            {% if user.student %}
+                                <br>
+                                {% for section in course.section_set.all %}
+                                    <div style="display:inline-block" class="mr-3 mt-2 mb-1">
+                                        <small class="text-muted">Time: {{ section.start_time|date:"H:i" }} - {{ section.start_time|add:course.course_duration|date:"H:i" }}</small>
+                                        <form method="POST" style="display:inline">
+                                            {% csrf_token %}
+                                            {% if section in user.student.section_set.all %}
+                                                <button class="btn btn-success btn-sm ml-2" type="submit" name="{{ section.id }}" value="Unregister">Unregister</button>
+                                            {% else %}
+                                                <button class="btn btn-success btn-sm ml-2" type="submit" name="{{ section.id }}" value="Register">Register</button>
+                                            {% endif %}
+                                        </form>
+                                    </div>
+                                {% endfor %}
+                            {% endif %}
                         </div>
                         <p class="article-content mb-1">{{ course.short_description }}</p>
                         <small class="text-muted">Tags: {{ course.tags.all|join:", " }}</small>
